[package]
name = "mean-shift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mean_shift"
crate-type = ["cdylib"]

[dependencies]
dashmap = { version = "6.1.0", features = ["rayon"] }
ndarray = { version = "0.16.1", features = ["rayon"] }
numpy = "0.23.0"
pyo3 = "0.23.3"
rayon = "1.10.0"
